Add documentation for missing packages

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -27,4 +27,12 @@
 	pre code {
 		tab-size: 2 !important;
 	}
+
+	span.req {
+		color: #ff4400;
+		cursor: help;
+		font-family: "Operator Mono", "Fira Code Retina", "Fira Code", "FiraCode-Retina", "Andale Mono", "Lucida Console",
+			Consolas, Monaco, monospace;
+		font-size: 13px;
+	}
 </style>
